--- a/97/index.html
+++ b/97/index.html
@@ -14,6 +14,8 @@ s.parentNode.insertBefore(t,s)}(window, document,'script',
 fbq('init', '839458723578876');
 fbq('init', '258707122282060');
 fbq('track', 'PageView');
+fbq('track', 'InitiateCheckout');
+fbq('track', 'Purchase');
 </script>
 <noscript><img height="1" width="1" style="display:none"
 src="https://www.facebook.com/tr?id=839458723578876&ev=PageView&noscript=1"
