--- a/97/index.html
+++ b/97/index.html
@@ -163,6 +163,15 @@
     </style>
   </head>
   <body>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-476T6HEPB9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-476T6HEPB9');
+</script>
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WW6FC9K"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
