--- a/97/index.html
+++ b/97/index.html
@@ -23,7 +23,7 @@ s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
 fbq('init', '1666549883529791');
 fbq('track', 'PageView');
-fbq('track', 'initiateCheckout');
+fbq('track', 'InitiateCheckout');
 fbq('track', 'AddPaymentInfo');
 fbq('track', 'Purchase');
 </script>
